--- a/StartPage.xaml
+++ b/StartPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Yatzy.MainPage"
+    x:Class="Yatzy.StartPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Yatzy"
