--- a/GamePage.xaml
+++ b/GamePage.xaml
@@ -231,7 +231,7 @@
                 </Grid>
             </StackPanel>
         </Popup>
-        <Button x:Name="OnesButton" Grid.Column="1" Content="Ones" Margin="621,108,0,0" VerticalAlignment="Top" Foreground="Black" BorderBrush="White" FocusVisualSecondaryBrush="{x:Null}" Click="OnesButton_Click" Background="White" Style="{StaticResource AccentButtonStyle}"/>
+        <Button x:Name="OnesButton" Grid.Column="1" Content="Ones" Margin="621,108,0,0" VerticalAlignment="Top" Foreground="Black" BorderBrush="White" FocusVisualSecondaryBrush="{x:Null}" Click="OnesButton_Click" Background="Red" Style="{StaticResource AccentButtonStyle}" d:IsHidden="True"/>
         <Button x:Name="TwosButton" Grid.Column="1" Content="Ones" Margin="624,142,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="ThreesButton" Grid.Column="1" Content="Ones" Margin="623,178,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="FoursButton" Grid.Column="1" Content="Ones" Margin="624,203,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
@@ -246,6 +246,7 @@
         <Button x:Name="LargeLadderButton" Grid.Column="1" Content="Ones" Margin="626,535,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="ChanceButton" Grid.Column="1" Content="Ones" Margin="626,561,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="YatzyButton" Grid.Column="1" Content="Ones" Margin="626,591,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
+        <TextBlock x:Name="OnesTextBlock" Grid.Column="1" HorizontalAlignment="Left" Margin="627,115,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Foreground="Black"/>
 
     </Grid>
 </Page>
