--- a/GamePage.xaml
+++ b/GamePage.xaml
@@ -231,7 +231,7 @@
                 </Grid>
             </StackPanel>
         </Popup>
-        <Button x:Name="OnesButton" Grid.Column="1" Content="Ones" Margin="621,108,0,0" VerticalAlignment="Top" Foreground="Black" BorderBrush="White" FocusVisualSecondaryBrush="{x:Null}" Click="OnesButton_Click" Background="Red" Style="{StaticResource AccentButtonStyle}" d:IsHidden="True"/>
+        <Button x:Name="OnesButton" Grid.Column="1" Content="Ones" Margin="621,108,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="White" FocusVisualSecondaryBrush="{x:Null}" Click="OnesButton_Click" Background="Red" Style="{StaticResource AccentButtonStyle}"/>
         <Button x:Name="TwosButton" Grid.Column="1" Content="Ones" Margin="624,142,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="ThreesButton" Grid.Column="1" Content="Ones" Margin="623,178,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="FoursButton" Grid.Column="1" Content="Ones" Margin="624,203,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
