Refactoring of scoretable system

--- a/GamePage.xaml
+++ b/GamePage.xaml
@@ -237,7 +237,7 @@
         <Button x:Name="FoursButton" Grid.Column="1" Content="Ones" Margin="624,203,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="FivesButton" Grid.Column="1" Content="Ones" Margin="624,236,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="SixesButton" Grid.Column="1" Content="Ones" Margin="624,264,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
-        <Button x:Name="OnePairButton" Grid.Column="1" Content="Ones" Margin="626,356,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
+        <Button x:Name="OnePairButton" Grid.Column="1" Content="Ones" Margin="626,356,0,0" VerticalAlignment="Top" Foreground="White" Background="Red" Click="OnePairButton_Click"/>
         <Button x:Name="TwoPairsButton" Grid.Column="1" Content="Ones" Margin="625,384,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="ThreePairsButton" Grid.Column="1" Content="Ones" Margin="623,416,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="FourPairsButton" Grid.Column="1" Content="Ones" Margin="623,444,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
@@ -247,6 +247,7 @@
         <Button x:Name="ChanceButton" Grid.Column="1" Content="Ones" Margin="626,561,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <Button x:Name="YatzyButton" Grid.Column="1" Content="Ones" Margin="626,591,0,0" VerticalAlignment="Top" Foreground="Black" Background="#33FFFFFF"/>
         <TextBlock x:Name="OnesTextBlock" Grid.Column="1" HorizontalAlignment="Left" Margin="627,115,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Foreground="Black"/>
+        <TextBlock x:Name="OnePairTextBlock" Grid.Column="1" HorizontalAlignment="Left" Margin="627,363,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Foreground="Black"/>
 
     </Grid>
 </Page>
