Added the rest of the numbers to the top row

--- a/ConfigurationPage.xaml
+++ b/ConfigurationPage.xaml
@@ -11,8 +11,8 @@
     <Grid Width="1280" Height="720" Background="#FFA3A3A3">
         <TextBlock x:Name="KonfigurationTitleText" HorizontalAlignment="Center" Margin="0,24,0,0" TextWrapping="Wrap" Text="Konfiguration" VerticalAlignment="Top" FontSize="80"/>
         <TextBox x:Name="InputBox" HorizontalAlignment="Center" Margin="0,535,0,0" TextWrapping="Wrap" Text="Skriv in antalet spelare" VerticalAlignment="Top" Width="734" Height="75" Background="White" Foreground="#FFE6E6E6" FontSize="48" CornerRadius="15,15,15,15" BorderBrush="#66000000" BorderThickness="1,1,1,1"/>
-        <Button x:Name="OkButton" Content="OK" Margin="832,535,0,0" VerticalAlignment="Top" Background="#FF0062FF" CornerRadius="15,15,15,15" Width="175" Height="75" FontSize="48" BorderBrush="Black" BorderThickness="1,1,1,1" Click="OkButton_Click"/>
-        <Button x:Name="InfoButton" Content="i" Margin="10,10,0,0" VerticalAlignment="Top" Background="#FF0062FF" BorderBrush="Black" Height="75" Width="75" CornerRadius="15,15,15,15" BorderThickness="1,1,1,1" FontSize="70" FontFamily="Mongolian Baiti" Click="InfoButton_Click"/>
+        <Button x:Name="OkButton" Content="OK" Margin="832,535,0,0" VerticalAlignment="Top" Background="#FF0062FF" CornerRadius="15,15,15,15" Width="175" Height="75" FontSize="48" BorderBrush="Black" BorderThickness="1,1,1,1" Click="OkButton_Click" Style="{StaticResource AccentButtonStyle}"/>
+        <Button x:Name="InfoButton" Content="i" Margin="10,10,0,0" VerticalAlignment="Top" Background="#FF0062FF" BorderBrush="Black" Height="75" Width="75" CornerRadius="15,15,15,15" BorderThickness="1,1,1,1" FontSize="70" FontFamily="Mongolian Baiti" Click="InfoButton_Click" Style="{StaticResource AccentButtonStyle}"/>
         <Rectangle x:Name="BlurRectangle" Height="720" Stroke="Black" Width="1280" Fill="Black" HorizontalAlignment="Center" VerticalAlignment="Center" d:IsHidden="True" Opacity="0.5"/>
 
         <Popup x:Name="InformationPopUp" Width="1024" Height="576" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="119,78,0,0" IsLightDismissEnabled="False" IsOpen="False">
